Ajustes no instalador, criação do packer de HTML

--- a/utils/initPack/src/index.html
+++ b/utils/initPack/src/index.html
@@ -18,6 +18,9 @@
 			<div class="row center">
 				<i>Olá mundo</i>
 			</div>
+			<div class="row center">
+				<a href="example.html">Ver exemplos</a>
+			</div>
 		</main>
 		<footer>
 			R4 Framework
