Removido o example; Criado o modelo junto ao initpack; Atualizado o instalador e compilador; Modificado de .compilar.json para r4.json

--- a/utils/initPack/src/index.html
+++ b/utils/initPack/src/index.html
@@ -21,6 +21,9 @@
 			<div class="row center">
 				<a href="example.html">Ver exemplos</a>
 			</div>
+			<div class="row center">
+				<a href="users/">Ver CRUD modelo</a>
+			</div>
 		</main>
 		<footer>
 			R4 Framework
